welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
maxValue:2: error: not found: value x
  x=nums(0)
  ^maxValue:4: error: not found: value x
    if (nums(i)>x){
                ^maxValue:5: error: not found: value x
      x=nums(i)
      ^maxValue:8: error: not found: value x
  return x
         ^